# ukeep

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  DOCKER_DEPLOY.md  Dioxus.toml  Dockerfile  Dockerfile.base  LICENSE  README.md  docker-cicd.sh  docker-compose.yml  docker-deploy.sh  docker-push.sh  input.css  package-lock.json  package.json
.github/workflows/: deploy.yml
.serena/: project.yml
.serena/memories/: code_style_and_conventions.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
assets/: main.css  manifest.json  sw.js  tailwind.css
docker/: .env.deploy.example  DOCKER_DEPLOY.md  Dockerfile  docker-cicd.sh  docker-compose.yml  docker-deploy.sh  docker-push.sh  nginx.conf
src/: lib.rs  main.rs  router.rs  state.rs  storage.rs  utils.rs
src/components/: item_card.rs  mod.rs
src/models/: item.rs
src/pages/: add_item.rs  home.rs  mod.rs
