[package]
name = "ukeep"
version = "0.1.0"
authors = ["zoket <violighten@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.2", features = ["router", "web"] }
chrono = { version = "0.4.42", features = ["serde"] }
uuid = { version = "1.19.0", features = ["v4", "fast-rng", "macro-diagnostics", "js", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo-storage = "0.3"
gloo-file = "0.3"
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlElement", "HtmlAnchorElement", "Url", "Blob", "BlobPropertyBag", "HtmlInputElement", "File", "FileReader", "Navigator", "ServiceWorkerContainer", "ServiceWorkerRegistration"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
log = "0.4"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

# Release 优化配置：针对 WASM 体积优化
[profile.release]
opt-level = "z"          # 优化代码大小
lto = true               # 启用链接时优化
codegen-units = 1        # 更好的优化效果
strip = "debuginfo"      # 剥离调试信息，避免 wasm-opt DWARF 兼容性问题
panic = "abort"          # panic 时直接终止

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
